<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="phoneAppLabel" product="default">Phone Services</string>
    <string name="emergencyDialerIconLabel">Emergency Dialer</string>
    <string name="phoneIconLabel">Phone</string>
    <string name="fdnListLabel">FDN list</string>
    <string name="unknown">Unknown</string>
    <string name="private_num">Private number</string>
    <string name="payphone">Payphone</string>
    <string name="onHold">On hold</string>
    <string name="mmiStarted">MMI code started</string>
    <string name="ussdRunning">USSD code running\u2026</string>
    <string name="mmiCancelled">MMI code canceled</string>
    <string name="cancel">Cancel</string>
    <string name="enter_input">USSD message must be between <xliff:g id="min_len" >%d</xliff:g> and <xliff:g id="max_len" >%d</xliff:g> characters. Please try again.</string>
    <string name="manageConferenceLabel">Manage conference call</string>
    <string name="ok">OK</string>
    <string name="audio_mode_speaker">Speaker</string>
    <string name="audio_mode_earpiece">Handset earpiece</string>
    <string name="audio_mode_wired_headset">Wired headset</string>
    <string name="audio_mode_bluetooth">Bluetooth</string>
    <string name="wait_prompt_str">Send the following tones?\n</string>
    <string name="pause_prompt_str">Sending tones\n</string>
    <string name="send_button">Send</string>
    <string name="pause_prompt_yes">Yes</string>
    <string name="pause_prompt_no">No</string>
    <string name="wild_prompt_str">Replace wild character with</string>
    <string name="no_vm_number">Missing voicemail number</string>
    <string name="no_vm_number_msg">No voicemail number is stored on the SIM card.</string>
    <string name="add_vm_number_str">Add number</string>
    <string name="voice_number_setting_primary_user_only">Voicemail Settings can only be modified by the Primary User.</string>
    <string name="puk_unlocked">Your SIM card has been unblocked. Your phone is unlocking\u2026</string>
    <string name="label_ndp">SIM network unlock PIN</string>
    <string name="sim_ndp_unlock_text">Unlock</string>
    <string name="sim_ndp_dismiss_text">Dismiss</string>
    <string name="requesting_unlock">Requesting network unlock\u2026</string>
    <string name="unlock_failed">Network unlock request unsuccessful.</string>
    <string name="unlock_success">Network unlock successful.</string>
    <string name="mobile_network_settings_not_available">Mobile network settings are not available for this user</string>
    <string name="labelGSMMore">GSM call settings</string>
    <string name="labelGsmMore_with_label">GSM call settings (<xliff:g id="subscriptionlabel" example="T-Mobile">%s</xliff:g>)</string>
    <string name="labelCDMAMore">CDMA call settings</string>
    <string name="labelCdmaMore_with_label">CDMA call settings (<xliff:g id="subscriptionlabel" example="Verizon">%s</xliff:g>)</string>
    <string name="apn_settings">Access Point Names</string>
    <string name="settings_label">Network settings</string>
    <string name="phone_accounts">Calling accounts</string>
    <string name="phone_accounts_make_calls_with">Make calls with</string>
    <string name="phone_accounts_make_sip_calls_with">Make SIP calls with</string>
    <string name="phone_accounts_ask_every_time">Ask first</string>
    <string name="phone_accounts_default_account_label">No network available</string>
    <string name="phone_accounts_settings_header">Settings</string>
    <string name="phone_accounts_choose_accounts">Choose accounts</string>
    <string name="phone_accounts_selection_header">Phone accounts</string>
    <string name="phone_accounts_add_sip_account">Add SIP account</string>
    <string name="phone_accounts_configure_account_settings">Configure account settings</string>
    <string name="phone_accounts_all_calling_accounts">All calling accounts</string>
    <string name="phone_accounts_all_calling_accounts_summary">Select which accounts can make calls</string>
    <string name="wifi_calling">Wi-Fi calling</string>
    <string name="connection_service_default_label">Built-in connection service</string>
    <string name="voicemail">Voicemail</string>
    <string name="voicemail_settings_with_label">Voicemail (<xliff:g id="subscriptionlabel" example="Mock Carrier">%s</xliff:g>)</string>
    <string name="voicemail_abbreviated">VM:</string>
    <string name="voicemail_notifications_key" translatable="false">voicemail_notification_key</string>
    <string name="voicemail_notifications_preference_title">Notifications</string>
    <string name="cell_broadcast_settings">Emergency broadcasts</string>
    <string name="call_settings">Call settings</string>
    <string name="additional_gsm_call_settings">Additional settings</string>
    <string name="additional_gsm_call_settings_with_label">Additional settings (<xliff:g id="subscriptionlabel" example="Verizon">%s</xliff:g>)</string>
    <string name="sum_gsm_call_settings">Additional GSM only call settings</string>
    <string name="additional_cdma_call_settings">Additional CDMA call settings</string>
    <string name="sum_cdma_call_settings">Additional CDMA only call settings</string>
    <string name="labelNwService">Network service settings</string>
    <string name="labelCallerId">Caller ID</string>
    <string name="sum_loading_settings">Loading settings\u2026</string>
    <string name="sum_hide_caller_id">Number hidden in outgoing calls</string>
    <string name="sum_show_caller_id">Number displayed in outgoing calls</string>
    <string name="sum_default_caller_id">Use default operator settings to display my number in outgoing calls</string>
    <string name="labelCW">Call waiting</string>
    <string name="sum_cw_enabled">During a call, notify me of incoming calls</string>
    <string name="sum_cw_disabled">During a call, notify me of incoming calls</string>
    <string name="call_forwarding_settings">Call forwarding settings</string>
    <string name="call_forwarding_settings_with_label">Call forwarding settings (<xliff:g id="subscriptionlabel" example="Verizon">%s</xliff:g>)</string>
    <string name="labelCF">Call forwarding</string>
    <string name="labelCFU">Always forward</string>
    <string name="messageCFU">Always use this number</string>
    <string name="sum_cfu_enabled_indicator">Forwarding all calls</string>
    <string name="sum_cfu_enabled">Forwarding all calls to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfu_enabled_no_number">Number is unavailable</string>
    <string name="sum_cfu_disabled">Off</string>
    <string name="labelCFB">When busy</string>
    <string name="messageCFB">Number when busy</string>
    <string name="sum_cfb_enabled">Forwarding to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfb_disabled">Off</string>
    <string name="disable_cfb_forbidden">Your operator doesn\'t support disabling call forwarding when your phone is busy.</string>
    <string name="labelCFNRy">When unanswered</string>
    <string name="messageCFNRy">Number when unanswered</string>
    <string name="sum_cfnry_enabled">Forwarding to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfnry_disabled">Off</string>
    <string name="disable_cfnry_forbidden">Your operator doesn\'t support disabling call forwarding when your phone doesn\'t answer.</string>
    <string name="labelCFNRc">When unreachable</string>
    <string name="messageCFNRc">Number when unreachable</string>
    <string name="sum_cfnrc_enabled">Forwarding to <xliff:g id="phonenumber" example="555-1212">{0}</xliff:g></string>
    <string name="sum_cfnrc_disabled">Off</string>
    <string name="disable_cfnrc_forbidden">Your carrier doesn\'t support disabling call forwarding when your phone is unreachable.</string>
    <string name="updating_title">Call settings</string>
    <string name="call_settings_admin_user_only">Call settings can only be changed by the admin user.</string>
    <string name="call_settings_with_label">Settings (<xliff:g id="subscriptionlabel" example="Mock Carrier">%s</xliff:g>)</string>
    <string name="error_updating_title">Call settings error</string>
    <string name="reading_settings">Reading settings\u2026</string>
    <string name="updating_settings">Updating settings\u2026</string>
    <string name="reverting_settings">Reverting settings\u2026</string>
    <string name="response_error">Unexpected response from network.</string>
    <string name="exception_error">Network or SIM card error.</string>
    <string name="stk_cc_ss_to_dial_error">SS request changed to regular call</string>
    <string name="stk_cc_ss_to_ussd_error">SS request changed to USSD request</string>
    <string name="stk_cc_ss_to_ss_error">Changed to new SS request</string>
    <string name="stk_cc_ss_to_dial_video_error">SS request changed to video call</string>
    <string name="fdn_check_failure">Your Phone app\'s Fixed Dialing Numbers setting is turned on. As a result, some call-related features aren\'t working.</string>
    <string name="radio_off_error">Turn on the radio before viewing these settings.</string>
    <string name="close_dialog">OK</string>
    <string name="enable">Turn on</string>
    <string name="disable">Turn off</string>
    <string name="change_num">Update</string>
    <string-array name="clir_display_values">
        
        <item>Network default</item>
        
        <item>Hide number</item>
        
        <item>Show number</item>
    </string-array>
    <string-array name="clir_values" translatable="false">
        
        <item><xliff:g>DEFAULT</xliff:g></item>
        
        <item><xliff:g>HIDE</xliff:g></item>
        
        <item><xliff:g>SHOW</xliff:g></item>
    </string-array>
    <string name="vm_changed">Voicemail number changed.</string>
    <string name="vm_change_failed">Couldn\'t change the voicemail number.\nContact your carrier if this problem persists.</string>
    <string name="sum_call_barring_enabled">On</string>
    <string name="sum_call_barring_disabled">Off</string>
    <string name="call_barring_baoc">All outgoing</string>
    <string name="call_barring_baoc_enabled">Disable blocking of all outgoing calls?</string>
    <string name="call_barring_baoc_disabled">Block all outgoing calls?</string>
    <string name="call_barring_baoic">Outgoing international</string>
    <string name="call_barring_baoic_enabled">Disable blocking of outgoing international calls?</string>
    <string name="call_barring_baoic_disabled">Block outgoing international calls?</string>
    <string name="call_barring_baoicr">Outgoing international roaming</string>
    <string name="call_barring_baoicr_enabled">Disable blocking of outgoing international roaming?</string>
    <string name="call_barring_baoicr_disabled">Block outgoing international roaming?</string>
    <string name="call_barring_baic">All incoming</string>
    <string name="call_barring_baic_enabled">Disable blocking of all incoming calls?</string>
    <string name="call_barring_baic_disabled">Block all incoming calls?</string>
    <string name="call_barring_baicr">Incoming international roaming</string>
    <string name="call_barring_baicr_enabled">Disable blocking of all incoming international roaming?</string>
    <string name="call_barring_baicr_disabled">Block incoming international roaming?</string>
    <string name="call_barring_deactivate_all">Deactivate all</string>
    <string name="call_barring_deactivate_all_description">Deactivate all call barring settings</string>
    <string name="call_barring_change_pwd">Change password</string>
    <string name="call_barring_change_pwd_description">Change call barring password</string>
    <string name="call_barring_settings">Call barring settings</string>
</resources>